# CellEvoX

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  config.json  example_config.json  quick_config.json  test_config.json  validation_config.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/platofrm_backups/: devcontainer_linux.json  devcontainer_windows.json
.github/workflows/: ci.yml
CellEvoX/: CMakeLists.txt
CellEvoX/build_skip_gui/: CMakeCache.txt  CTestTestfile.cmake  CellEvoXTests_include-b12d07c.cmake  CellEvoXTests_tests-b12d07c.cmake  Makefile  cmake_install.cmake
CellEvoX/include/core/: DatabaseManager.hpp  RunDataEngine.hpp  application.hpp
CellEvoX/include/ecs/: Cell.hpp  Run.hpp  StateManager.hpp  components.h
CellEvoX/include/io/: PopulationSnapshotIO.hpp
CellEvoX/include/spatial/: SpatialHashGrid.hpp
CellEvoX/include/systems/: CommonPopulationStep.hpp  GlobalPopulationStep.hpp  SimulationEngine.hpp  SimulationEngine3D.hpp  SimulationEngine3DCapacity.hpp  SimulationEngine3DGlobal.hpp  SpatialHashGrid.hpp
CellEvoX/include/utils/: DeterministicRng.hpp  MathUtils.hpp  ParallelAlgorithms.hpp  PhaseProfiler.hpp  SimulationConfig.hpp
CellEvoX/qml/: main.qml
CellEvoX/qml/components/: FileOperations.qml  GlassPanel.qml  GraphGenerator.qml  ModelSwitch.qml  ModernButton.qml  ModernTextField.qml  ParameterInput.qml  ProgressBar.qml
CellEvoX/qml/style/: Themes.qml
CellEvoX/scripts/: animate_clone_growth_2d.py  generate_test_data.py  plot_clone_counts.py  plot_clone_lifespans.py  plot_muller.py  plot_phylogeny.py  requirements-visualization.txt  snapshot_io.py  test_plot_muller_and_phylogeny.py  test_radial.py  validate_snapshot.py  visualize_tumor_3d.py
CellEvoX/src/: main.cpp
CellEvoX/src/core/: DatabaseManager.cpp  RunDataEngine.cpp  application.cpp
CellEvoX/src/ecs/: Run.cpp  environment.cpp
CellEvoX/src/spatial/: SpatialHashGrid.cpp
CellEvoX/src/systems/: SimulationEngine.cpp  SimulationEngine3D.cpp  SimulationEngine3DCapacity.cpp  SimulationEngine3DGlobal.cpp
CellEvoX/tests/: bench_simulation.cpp  coverage_report.py  test_common_population_step.cpp  test_population_snapshot_io.cpp  test_run_data_engine.cpp  test_simulation.cpp
CellEvoX/tests/benchmarks/: capture_baseline.py  ci_benchmark_gate.py  compare_benchmarks.py  correctness_baseline.json
docs/: PROJECT_KNOWLEDGE_BASE.md  README.md  agent-onboarding.md  architecture.md  batch-runs.md  config-fields-by-mode.md  development-workflows.md  high-risk-areas.md  run-output-and-analysis.md  simulation-engines.md  stochastic-scaling-guide.md
include/CellEvoX/core/: application.h  application.hpp
include/CellEvoX/ecs/: environment.hpp
resources/: qml.qrc
resources/qml/: main.qml
resources/qml/components/: GlassPanel.qml  qmldir
resources/qml/style/: Themes.qml
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp
src/ecs/: environment.cpp
web/: start.sh
web/backend/: main.py  requirements.txt  results_parser.py  run_batch.py  runner.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/api/: client.ts
web/frontend/src/components/: ErrorBoundary.tsx  Navbar.tsx
web/frontend/src/components/config/: CoreParams.tsx  InlineNumberValue.tsx  MutationEditor.tsx  NumberInput.tsx  OutputParams.tsx  PopulationParams.tsx  SmoothSlider.tsx  SpatialParams.tsx
web/frontend/src/components/results/: MullerPlot.tsx  RunSelector.tsx  RunSummary.tsx  StatChart.tsx
web/frontend/src/pages/: ConfigPage.tsx  ResultsPage.tsx  RunPage.tsx
web/frontend/src/stores/: index.ts
web/frontend/src/types/: simulation.ts
web/frontend/src/utils/: batchQueue.ts  configPayload.ts
